--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel=stylesheet href="index.css">
 	<link rel=stylesheet href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
 	<script src="https://profile.codersrank.io/widget/widget.js"></script>
-<title>Palettes</title>
+<title>Colour Palettes</title>
 	<nav class="navbar navbar-dark bg-dark">
 			<p align="center"><p class="text-light display-4">Colour Palettes Examples</p></p>
 			<p align="center"><button class="btn btn-light"><a href="https://www.instagram.com/ocean.ui/" target="_blank">Source</a></button></p>
@@ -200,6 +199,110 @@
 								</div>
 							</div>
 					</div>	
+					<div class="div07 jumbotron text-dark">
+						<p class="display-4">Cooling</p>
+						<img class ="img img-fluid" src="img/COOLING.jpg">
+							<div class=div2>
+								<div class="text-light myProgress1">
+									<div id="myBar53"> #482B7A </div>
+									<div id="myBar54"> #2765B6 </div>
+									<div id="myBar55"> #14A0D3 </div>
+									<div id="myBar56"> #1CD1B6 </div>
+									<p class="text-dark" align:"center"> Background : Black</p>
+									<div class="text-light" id="background14"> #212226</div>
+								</div>
+							</div>
+					</div>	
+					<div class="div08 jumbotron text-light">
+						<p class="display-4">Turtle</p>
+						<img class ="img img-fluid" src="img/TURTLE.jpg">
+							<div class=div2>
+								<div class="text-light myProgress1">
+									<div id="myBar57"> #E5EFC1 </div>
+									<div id="myBar58"> #A2D5AB </div>
+									<div id="myBar59"> #39AEA9 </div>
+									<div id="myBar60"> #557B83 </div>
+									<p align:"center"> Background : Black</p>
+									<div class="text-light" id="background14"> #1C1C1E</div>
+								</div>
+							</div>
+					</div>	
+					<div class="div09 jumbotron text-dark">
+						<p class="display-4">Warming</p>
+						<img class ="img img-fluid" src="img/WARMING.jpg">
+							<div class=div2>
+								<div class="text-light myProgress1">
+									<div id="myBar61"> #C5211C </div>
+									<div id="myBar62"> #E4443F </div>
+									<div id="myBar63"> #F59B65 </div>
+									<div id="myBar64"> #F7BA79 </div>
+									<p class="text-dark" align:"center"> Background : Black</p>
+									<div class="text-light" id="background15"> #212226</div>
+								</div>
+							</div>
+					</div>	
+					<div class="div10 jumbotron text-light">
+						<p class="display-4">Embers</p>
+						<img class ="img img-fluid" src="img/EMBERS.jpg">
+							<div class=div2>
+								<div class="text-light myProgress1">
+									<div id="myBar65"> #41436A </div>
+									<div id="myBar66"> #984063 </div>
+									<div id="myBar67"> #F64668 </div>
+									<div id="myBar68"> #FE9677 </div>
+									<p align:"center"> Background : Madison </p>
+									<div class="text-light" id="background16"> #2A3950</div>
+								</div>
+							</div>
+					</div>	
+					<div class="div1 jumbotron bg-dark text-light">
+						<p class="display-4">Matte</p>
+						<img class ="img img-fluid" src="img/MATTE.jpg">
+							<div class=div2>
+								<div class="text-light myProgress1">
+									<div id="myBar69"> #293556 </div>
+									<div id="myBar70"> #2E4583 </div>
+									<div id="myBar71"> #3E60C1 </div>
+									<div id="myBar72"> #5983FC </div>
+									<p align:"center"> Background : Black </p>
+									<div class="text-light" id="background17"> #212226 </div>
+								</div>
+							</div>
+					</div>	
+					<div class="divYA bg-dark text-light">
+						<div class="row">
+						<div class="div2 text-light col-sm-6">
+							<h1 align="center">Personal data</h1>
+							<h4>Some of my personal data :</h4>
+							<ul>
+								<li>Full name : Arifian Saputra</li>
+								<li>Surname : - </li>
+								<li>Country of origins : Indonesia</li>
+						<li>Date of born : January 07th , 2002 </li>
+								<li>Postal code : 29152 </li>
+						   </ul>
+						</div>
+						<div class="div3 text-light col-sm-6">
+							<h1 align="center">Contacts</h1>
+						<h3>You can contact me on : </h3>
+						<ul>
+							<li>Facebook : Arifian Saputra</li>
+							<LI>Email : arifiansaputra43@gmail.com</LI>
+							<li>Email2 : yuotosaka43@gmail.com</li>
+							<li>Instagram : @arifiansaputra_</li>
+							<li>Whatsapp : +62 823 8698 6705</li>
+							<li>Twitter : @ArifianSaputra1</li>
+							<li>FreeCodeCamp username : arifian853</li>
+							<li>CodePolitan username : arifian853</li>
+							<li>GitHub username : arifian853</li>
+							<li>Discord username : arifian853</li>
+							<li>SoloLearn account : Arifian Saputra</li>
+							<li>Most of my game nickname was : AutumnNymph </li>
+						</ul>
+						</div>
+						</div>
+						</div>
+				<hr />
 					<div class="jumbotron text-light bg-dark">Note : Copyright belong to ocean.ui
 						<p align="left"><button class="btn btn-light"><a href="https://www.instagram.com/ocean.ui/" target="_blank">ocean.ui</a></button></p>
 					 </div>
