--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 									<div id="myBar46"> #30A0E0 </div>
 									<div id="myBar47"> #FFC872 </div>
 									<div id="myBar48"> #FFE3B3 </div>
-									<p class="text-dark" align:"center"> Background : Black</p>
-									<div class="text-light" id="background12"> #212226</div>
+									<p class="text-dark" align:"center"> Background : White</p>
+									<div class="text-light" id="background12"> #FFFFFF</div>
 								</div>
 							</div>
 					</div>	
@@ -307,7 +307,7 @@
 						<p align="left"><button class="btn btn-light"><a href="https://www.instagram.com/ocean.ui/" target="_blank">ocean.ui</a></button></p>
 					 </div>
 </body>
-<footer class="footer1">© Arifian Saputra , 2020 
+<footer class="footer1">Copyright © Arifian Saputra , 2020. All rights reserved. 
 	<hr />
 		<codersrank-widget
   username="arifian853"
